# jellyml

./: .gitignore  README.md  secret_hint.md
client/: package-lock.json  package.json
client/src/: Controller.ts  Donut.ts  DonutMaker.ts  DonutState.ts  JellySprite.ts  MouseOrTouchInput.d.ts  RectPosition.ts  Tentacle.ts  Touches.d.ts  UFO.ts  animate_tentacles_grabbed_donut.ts  deleteTouch.ts  draw_donut.ts  draw_tentacle_donut.ts  find_next_donut.ts  handle_collisions.ts  index.ts  load_image.ts  makeAnimationCanvas.ts  setupMouseAndTouchListeners.ts  setupTouch.ts
client/templates/: blog.pug  docs.pug  footer.pug  head.pug  index.pug  logo.pug  normalize.pug  red_box.pug
dev_server/: package-lock.json  package.json  tsconfig.json
dev_server/data/: python_example.css  python_example.html
dev_server/dev/: build.js  injectReload.js
dev_server/src/: BuildStatus.ts  client_build_parameters.ts  directories.ts  get_path_url.ts  handle_reload.ts  markdown_transform.ts  server.ts
docs/: CNAME  blog.html  docs.html  index.html
docs/code/: index.js  index.js.map
jellyml/: pyproject.toml
jellyml-lightning/: pyproject.toml
jellyml-lightning/src/jellml-lightning/: JellyMLLightningPlugin.py  __init__.py
jellyml/src/jellyml/: CommandDict.py  CommandDispatcher.py  DonutLogo.py  EatLogo.py  FixLogo.py  GitLogo.py  HistoryFd.py  JellyHistoryArgs.py  JellyHistoryItem.py  JellyHistoryJSON.py  JellyMLHistoryMap.py  JellyMLSnapshotHeader.py  Run.py  SecretAward.py  ShellCode.py  SubParsersType.py  SubParsersType.pyi  UndonutLogo.py  VerbosityArgs.py  __init__.py  _create_snapshot.py  add_code.py  add_help_printer.py  add_help_to_parser.py  add_option.py  buffered_write.py  check_if_git_is_available.py  cli.py  command_box.py  constants.py  create_git_bundle.py  create_git_repo.py  create_new_branch_for_changes_after_eating.py  delete_last_history_item.py  eat.py  extract_bundle.py  find_entry_in_stash.py  fix.py  fix_clear_history.py  fix_get_history_path.py  (+59 more)
